[project]
name = "mira"
version = "0.1.0"
description = "The cooolest Discord App"
authors = [
    {name = "dizziedbliss"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "hikari (>=2.4.1,<3.0.0)",
    "hikari-lightbulb (>=3.2.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
